feat: styles changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,25 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#E8E8E8</color>
     <color name="acid_green">#4CFF00</color>
+
+
+    <color name="water">#5090D6</color>
+    <color name="dragon">#0B6DC3</color>
+    <color name="electric">#F4D23C</color>
+    <color name="ghost">#5269AD</color>
+    <color name="fire">#FF9D55</color>
+    <color name="ice">#73CEC0</color>
+    <color name="grass">#63BC5A</color>
+    <color name="bug">#91C12F</color>
+    <color name="fighting">#CE416B</color>
+    <color name="normal">#919AA2</color>
+    <color name="dark">#5A5465</color>
+    <color name="steel">#5A8EA2</color>
+    <color name="rock">#C5B78C</color>
+    <color name="psychic">#FA7179</color>
+    <color name="ground">#D97845</color>
+    <color name="poison">#B567CE</color>
+    <color name="flying">#89AAE3</color>
+    <color name="fairy">#EC8FE6</color>
+
 </resources>
